launchpad-buildd (137) UNRELEASED; urgency=medium

  * Remove handling for pre-karmic versions of Twisted that didn't support
    --umask.
  * Stop cleaning /var/log/launchpad-buildd/ from cron; logrotate handles
    that now.
  * Configure systemd-timesyncd to use the NTP server configured in
    /etc/launchpad-buildd/default.
  * buildrecipe: Add option parsing framework.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 16 Nov 2015 18:12:29 +0000

launchpad-buildd (136) trusty; urgency=medium

  * Use twisted.python.log.msg rather than print to write to the log file.
    Twisted 15.2's stdio wrapper tries to decode as ASCII and thus breaks on
    sbuild's UTF-8 section markers, and this seems to be the simplest way to
    fix that while preserving source compatibility with earlier versions of
    Twisted.
  * Add Python packaging files so that Launchpad's test suite can
    incorporate this as a Python dependency rather than requiring
    python-lpbuildd to be installed on the test system.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Nov 2015 13:59:48 +0000

launchpad-buildd (135) trusty; urgency=medium

  * debian/control: Require python-debian (>= 0.1.23), needed for changes in
    launchpad-buildd 133.
  * debian/control: Drop dependency on linux32.  It's been in util-linux for
    ages, which is Essential, and utopic dropped the Provides.
  * debian/launchpad-buildd.init: Set "Should-Start: cloud-init" to ensure
    that launchpad-buildd is started after the hostname is set.
  * Simplify BuilddSlaveTestSetup slightly.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 29 Oct 2015 17:49:57 +0000

launchpad-buildd (134) trusty; urgency=medium

  * buildsnap: Drop explicit installation of sudo, now fixed in snapcraft.
  * Rewrite debian/rules in modern dh style.
  * buildsnap: Pass SNAPCRAFT_LOCAL_SOURCES=1 to snapcraft so that it uses
    the build's sources.list.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 24 Sep 2015 10:20:13 +0100
